--- a/search.html
+++ b/search.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://unpkg.com/lucide@latest"></script>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Void Search</title>
@@ -154,6 +156,7 @@
       margin-right: 0.3rem;
     }
   </style>
+  <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
   <div class="layout-wrapper">
@@ -183,13 +186,14 @@
         <div id="leaderboard"></div>
       </div> <!-- closes .content-wrapper -->
 
-      <div class="bottom-nav">
-        <a href="index.html">🏠</a>
-        <a href="search.html">🔍</a>
-        <a href="publish.html">➕</a>
-        <a href="reels.html">🎞️</a>
-        <a href="profile.html">👤</a>
-      </div>
+     <div class="bottom-nav">
+  <a href="index.html"><i data-lucide="home"></i></a>
+  <a href="search.html"><i data-lucide="search"></i></a>
+  <a href="publish.html"><i data-lucide="plus-circle"></i></a>
+  <a href="reels.html"><i data-lucide="video"></i></a>
+  <a href="profile.html"><i data-lucide="user"></i></a>
+</div>
+
 
       <script>
         const fakeAccounts = [
@@ -302,6 +306,8 @@ document.addEventListener("click", function (e) {
         renderAccounts();
         renderLeaderboard();
         updateLiveStats();
+lucide.createIcons();
+
       </script>
     </div> <!-- closes #app-frame -->
   </div> <!-- closes .layout-wrapper -->
