--- a/reels.html
+++ b/reels.html
@@ -123,13 +123,16 @@ text-shadow: 0 0 6px #000;
 max-width: 80%;
 }
 .user-info {
-position: absolute;
-bottom: 80px;
-left: 10px;
-display: flex;
-align-items: center;
-transition: transform 0.3s ease;
+  transition: transform 0.3s ease;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  bottom: 80px;
+  left: 10px;
+  text-decoration: none;
+  color: inherit;
 }
+
 .user-info img {
 width: 40px;
 height: 40px;
