--- a/profile.html
+++ b/profile.html
@@ -219,6 +219,8 @@
       box-shadow: 0 0 8px #f44;
     }
   </style>
+  <script src="https://unpkg.com/lucide@latest"></script>
+
 </head>
 <body>
 
@@ -272,13 +274,14 @@
       <div class="stat-grid" id="statGrid"></div>
     </div>
 
-    <div class="bottom-nav">
-      <a href="index.html">🏠</a>
-      <a href="search.html">🔍</a>
-      <a href="publish.html">➕</a>
-      <a href="reels.html">🎞️</a>
-      <a href="profile.html">👤</a>
-    </div>
+   <div class="bottom-nav">
+  <a href="index.html"><i data-lucide="home"></i></a>
+  <a href="search.html"><i data-lucide="search"></i></a>
+  <a href="publish.html"><i data-lucide="plus-circle"></i></a>
+  <a href="reels.html"><i data-lucide="video"></i></a>
+  <a href="profile.html"><i data-lucide="user"></i></a>
+</div>
+
   </div>
 </div> <!-- closes layout-wrapper -->
 
@@ -387,6 +390,8 @@ function generateAvatars() {
   }
 
   updateLiveStats();
+  lucide.createIcons();
+
 </script>
 </body>
 </html>
