--- a/story.html
+++ b/story.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://unpkg.com/lucide@latest"></script>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Void Stories</title>
@@ -212,19 +214,19 @@
         <a class="back-button" href="index.html">← Back to Feed</a>
 
         <div class="story-wrapper">
-          <div class="prev-button" onclick="prevStory()">‹</div>
-          <div class="next-button" onclick="nextStory()">›</div>
+         <div class="prev-button" onclick="prevStory()"><i data-lucide="chevron-left"></i></div>
+         <div class="next-button" onclick="nextStory()"><i data-lucide="chevron-right"></i></div>
           <div id="storyWrapper"></div>
         </div>
       </div> <!-- closes .content-wrapper -->
 
-      <div class="bottom-nav">
-        <a href="index.html">🏠</a>
-        <a href="search.html">🔍</a>
-        <a href="publish.html">➕</a>
-        <a href="reels.html">🎞️</a>
-        <a href="profile.html">👤</a>
-      </div>
+     <div class="bottom-nav">
+  <a href="index.html"><i data-lucide="home"></i></a>
+  <a href="search.html"><i data-lucide="search"></i></a>
+  <a href="publish.html"><i data-lucide="plus-circle"></i></a>
+  <a href="reels.html"><i data-lucide="video"></i></a>
+  <a href="profile.html"><i data-lucide="user"></i></a>
+</div>
 
       <script>
         const usernames = ["void_vibes", "scroller3000", "ghostfeed", "lostinloop", "tapmaster", "doomposter"];
@@ -336,6 +338,8 @@
         updateSidebarStats();
         startWastedTimer();
         incrementStat(stats.storiesViewed);
+        lucide.createIcons();
+
       </script>
     </div> <!-- closes #app-frame -->
   </div> <!-- closes .layout-wrapper -->
