--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
       height: 100%;
       overflow: hidden;
     }
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #eeeeee;
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 0;
-    }
+   body {
+  font-family: Arial, sans-serif;
+  background-color: #eeeeee;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: env(safe-area-inset-top, 20px) 0 0 0; /* Fixes top bar overlap */
+  height: 100%;
+  overflow: hidden;
+}
+
     .layout-wrapper {
       display: flex;
       align-items: center;
@@ -33,23 +36,37 @@
       max-width: 1600px;
       height: 100vh;
     }
-    #live-stats {
-      flex-shrink: 0;
-      width: 180px;
-      margin-right: 20px;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      padding: 10px;
-      background-color: #1a1a1a;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
-      position: sticky;
-      top: 20px;
-      height: fit-content;
-      font-size: 0.85rem;
-      line-height: 1.6;
-    }
+   #live-stats {
+  flex-shrink: 0;
+  width: 180px;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 10px;
+  background-color: #1a1a1a;
+  border-radius: 12px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  height: fit-content;
+  font-size: 0.85rem;
+  line-height: 1.6;
+}
+    @media (max-width: 768px) {
+  #live-stats {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    z-index: 999;
+  }
+
+  #live-stats.active {
+    display: flex;
+  }
+}
+
+
     #app-frame {
       width: min(645px, 95vw);
       height: 100vh;
@@ -77,19 +94,30 @@
       border-radius: 4px;
     }
     .bottom-nav {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background-color: #1a1a1a;
-      border-top: 1px solid #333;
-      display: flex;
-      justify-content: space-around;
-      padding: 0.5rem 0;
-      z-index: 10;
-      border-bottom-left-radius: 20px;
-      border-bottom-right-radius: 20px;
-    }
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #1a1a1a;
+  border-top: 1px solid #333;
+  display: flex;
+  justify-content: space-around;
+  padding: 0.5rem 0;
+  z-index: 10;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+@media (max-width: 768px) {
+  .bottom-nav {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-radius: 0;
+  }
+}
+
     .bottom-nav a {
       color: #888;
       text-decoration: none;
@@ -451,6 +479,7 @@
 
     <div id="app-frame">
 <div class="content-wrapper">
+</div>
 <header>
   <img src="INSTAVOID - LOGO.png" alt="InstaVoid Logo" class="logo-img" />
   <div class="nav-icons">
