--- a/index.html
+++ b/index.html
@@ -363,8 +363,13 @@
       </div>
     </div>
   </div>
-
-  <!-- Keep your original JS code below this line -->
-  <!-- ... -->
+<body>
+   <div class="layout-wrapper">
+    <div id="live-stats">
+      <button class="close-btn mobile-only" aria-label="Close Stats">
+   <i data-lucide="x"></i>
+ </button>
+   <div>Minutes Wasted: <span id="stat-minutes">0</span></div>
+   
 </body>
 </html>
