--- a/index.html
+++ b/index.html
@@ -316,6 +316,51 @@
       80% { opacity: 1; }
       100% { opacity: 0; }
     }
+    @media (max-width: 600px) {
+  .live-stats-sidebar {
+    position: sticky;
+    top: 0;
+    background-color: #111; /* Or whatever your background is */
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, auto);
+    gap: 4px;
+    padding: 8px;
+    font-size: 10px;
+    z-index: 999;
+  }
+
+  .live-stats-sidebar .stat {
+    text-align: center;
+    padding: 2px;
+    word-wrap: break-word;
+  }
+
+  /* Optional: If icons or emojis are used */
+  .live-stats-sidebar .stat-icon {
+    font-size: 12px;
+    display: block;
+  }
+
+  .bottom-nav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    max-width: 100%;
+    background-color: #000; /* Adjust to match theme */
+    display: flex;
+    justify-content: space-around;
+    padding: 8px 0;
+    z-index: 1000;
+  }
+
+  /* Avoid overlap between nav and content */
+  .main-content {
+    padding-bottom: 60px; /* space for bottom nav */
+  }
+}
+
   </style>
   <script src="https://unpkg.com/lucide@latest"></script>
 
