--- a/index.html
+++ b/index.html
@@ -360,6 +360,32 @@
     padding-bottom: 60px; /* space for bottom nav */
   }
 }
+@media (max-width: 600px) {
+  .live-stats-sidebar {
+    position: sticky;
+    top: 0;
+    background-color: #111;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, auto);
+    gap: 4px;
+    padding: 8px;
+    font-size: 10px;
+    z-index: 999;
+  }
+
+  .live-stats-sidebar .stat {
+    text-align: center;
+    padding: 4px 2px;
+    line-height: 1.2;
+  }
+
+  .stat-icon {
+    display: block;
+    font-size: 14px;
+    margin-bottom: 2px;
+  }
+}
 
   </style>
   <script src="https://unpkg.com/lucide@latest"></script>
