--- a/index.html
+++ b/index.html
@@ -393,18 +393,19 @@
 </head>
 <body>
   <div class="layout-wrapper">
-   <div id="live-stats">
-  <div>Minutes Wasted: <span id="stat-minutes">0</span></div>
-  <div>Scrolls Done: <span id="stat-scrolls">0</span></div>
-  <div>Likes Given: <span id="stat-likes">0</span></div>
-  <div>Comments Given: <span id="stat-comments">0</span></div>
-  <div>Reposts Done: <span id="stat-reposts">0</span></div>
-  <div>Bookmarks: <span id="stat-bookmarks">0</span></div>
-  <div>Reels Viewed: <span id="stat-reels">0</span></div>
-  <div>Stories Viewed: <span id="stat-stories">0</span></div>
-  <div>Posts Posted: <span id="stat-posts">0</span></div>
-  <div>Profiles Visited: <span id="stat-profiles">0</span></div>
+ <div class="live-stats-sidebar">
+  <div class="stat"><i data-lucide="clock"></i> <span id="stat-minutes">0</span> min</div>
+  <div class="stat"><i data-lucide="compass"></i> <span id="stat-scrolls">0</span> scrolls</div>
+  <div class="stat"><i data-lucide="heart"></i> <span id="stat-likes">0</span> likes</div>
+  <div class="stat"><i data-lucide="message-circle"></i> <span id="stat-comments">0</span> comments</div>
+  <div class="stat"><i data-lucide="repeat"></i> <span id="stat-reposts">0</span> reposts</div>
+  <div class="stat"><i data-lucide="bookmark"></i> <span id="stat-bookmarks">0</span> bookmarks</div>
+  <div class="stat"><i data-lucide="film"></i> <span id="stat-reels">0</span> reels</div>
+  <div class="stat"><i data-lucide="book-open"></i> <span id="stat-stories">0</span> stories</div>
+  <div class="stat"><i data-lucide="file-text"></i> <span id="stat-posts">0</span> posts</div>
+  <div class="stat"><i data-lucide="user"></i> <span id="stat-profiles">0</span> profiles</div>
 </div>
+
 
 
     <div id="app-frame">
