--- a/index.html
+++ b/index.html
@@ -394,16 +394,16 @@
 <body>
   <div class="layout-wrapper">
 <div class="live-stats-sidebar">
-  <div class="stat"><i data-lucide="clock"></i> <span id="stat-minutes">0</span> min</div>
-  <div class="stat"><i data-lucide="chevrons-down"></i> <span id="stat-scrolls">0</span> scrolls</div>
-  <div class="stat"><i data-lucide="heart"></i> <span id="stat-likes">0</span> likes</div>
-  <div class="stat"><i data-lucide="message-circle"></i> <span id="stat-comments">0</span> comments</div>
-  <div class="stat"><i data-lucide="repeat"></i> <span id="stat-reposts">0</span> reposts</div>
-  <div class="stat"><i data-lucide="bookmark"></i> <span id="stat-bookmarks">0</span> bookmarks</div>
-  <div class="stat"><i data-lucide="video"></i> <span id="stat-reels">0</span> reels</div>
-  <div class="stat"><i data-lucide="layers"></i> <span id="stat-stories">0</span> stories</div>
-  <div class="stat"><i data-lucide="plus-circle"></i> <span id="stat-posts">0</span> posts</div>
-  <div class="stat"><i data-lucide="user"></i> <span id="stat-profiles">0</span> profiles</div>
+  <div class="stat"><i data-lucide="clock"></i> <span id="stat-minutes">0</span> Minutes Wasted</div>
+  <div class="stat"><i data-lucide="chevrons-down"></i> <span id="stat-scrolls">0</span> Scrolls Done</div>
+  <div class="stat"><i data-lucide="heart"></i> <span id="stat-likes">0</span> Likes Given</div>
+  <div class="stat"><i data-lucide="message-circle"></i> <span id="stat-comments">0</span> Comments Given</div>
+  <div class="stat"><i data-lucide="repeat"></i> <span id="stat-reposts">0</span> Reposts Done</div>
+  <div class="stat"><i data-lucide="bookmark"></i> <span id="stat-bookmarks">0</span> Bookmarks</div>
+  <div class="stat"><i data-lucide="video"></i> <span id="stat-reels">0</span> Reels Viewed</div>
+ <div class="stat"><i data-lucide="user-circle"></i> <span id="stat-stories">0</span> Stories Viewed</div>
+  <div class="stat"><i data-lucide="plus-circle"></i> <span id="stat-posts">0</span> Posts Posted</div>
+  <div class="stat"><i data-lucide="user"></i> <span id="stat-profiles">0</span> Profiles Visited</div>
 </div>
 
 
