--- a/index.html
+++ b/index.html
@@ -412,6 +412,30 @@
     z-index: 999;
   }
 }
+@media (max-width: 600px) {
+  .stats-toggle-bar {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    background-color: #1a1a1a;
+    color: #fff;
+    text-align: center;
+    padding: 8px 0;
+    font-size: 14px;
+    cursor: pointer;
+    z-index: 9999;
+    border-bottom: 1px solid #333;
+  }
+
+  #stats-container.collapsed {
+    display: none;
+  }
+
+  #stats-container {
+    background-color: #111;
+    z-index: 9998;
+  }
+}
 
   </style>
   <script src="https://unpkg.com/lucide@latest"></script>
@@ -419,20 +443,28 @@
 </head>
 <body>
   <div class="layout-wrapper">
+<!-- Sticky Toggle Button for Mobile -->
+<div class="stats-toggle-bar" onclick="toggleStats()">Show Stats ▼</div>
+
+<!-- Hidden/Visible Stats Container -->
 <div id="stats-container" class="collapsed">
   <div class="live-stats-sidebar">
-  <div class="stat"><i data-lucide="clock"></i> <span id="stat-minutes">0</span> Minutes Wasted</div>
-  <div class="stat"><i data-lucide="chevrons-down"></i> <span id="stat-scrolls">0</span> Scrolls Done</div>
-  <div class="stat"><i data-lucide="heart"></i> <span id="stat-likes">0</span> Likes Given</div>
-  <div class="stat"><i data-lucide="message-circle"></i> <span id="stat-comments">0</span> Comments Given</div>
-  <div class="stat"><i data-lucide="repeat"></i> <span id="stat-reposts">0</span> Reposts Done</div>
-  <div class="stat"><i data-lucide="bookmark"></i> <span id="stat-bookmarks">0</span> Bookmarks</div>
-  <div class="stat"><i data-lucide="video"></i> <span id="stat-reels">0</span> Reels Viewed</div>
- <div class="stat"><i data-lucide="user-circle"></i> <span id="stat-stories">0</span> Stories Viewed</div>
-  <div class="stat"><i data-lucide="plus-circle"></i> <span id="stat-posts">0</span> Posts Posted</div>
-  <div class="stat"><i data-lucide="user"></i> <span id="stat-profiles">0</span> Profiles Visited</div>
+    <div class="stat"><i data-lucide="clock"></i> <span id="stat-minutes">0</span> Minutes Wasted</div>
+    <div class="stat"><i data-lucide="chevrons-down"></i> <span id="stat-scrolls">0</span> Scrolls Done</div>
+    <div class="stat"><i data-lucide="heart"></i> <span id="stat-likes">0</span> Likes Given</div>
+    <div class="stat"><i data-lucide="message-circle"></i> <span id="stat-comments">0</span> Comments Given</div>
+    <div class="stat"><i data-lucide="repeat"></i> <span id="stat-reposts">0</span> Reposts Done</div>
+    <div class="stat"><i data-lucide="bookmark"></i> <span id="stat-bookmarks">0</span> Bookmarks</div>
+    <div class="stat"><i data-lucide="video"></i> <span id="stat-reels">0</span> Reels Viewed</div>
+    <div class="stat"><i data-lucide="user-circle"></i> <span id="stat-stories">0</span> Stories Viewed</div>
+    <div class="stat"><i data-lucide="plus-circle"></i> <span id="stat-posts">0</span> Posts Posted</div>
+    <div class="stat"><i data-lucide="user"></i> <span id="stat-profiles">0</span> Profiles Visited</div>
   </div>
 </div>
+
+<!-- Leave this part below -->
+<div class="layout-wrapper">
+
 
 
 
@@ -678,6 +710,18 @@ function toggleStats() {
   const container = document.getElementById('stats-container');
   const toggleBar = document.querySelector('.stats-toggle-bar');
   
+  if (container.classList.contains('collapsed')) {
+    container.classList.remove('collapsed');
+    toggleBar.innerHTML = 'Hide Stats ▲';
+  } else {
+    container.classList.add('collapsed');
+    toggleBar.innerHTML = 'Show Stats ▼';
+  }
+}
+function toggleStats() {
+  const container = document.getElementById('stats-container');
+  const toggleBar = document.querySelector('.stats-toggle-bar');
+
   if (container.classList.contains('collapsed')) {
     container.classList.remove('collapsed');
     toggleBar.innerHTML = 'Hide Stats ▲';
